Correct vertical alignment for the variations dropdown.

--- a/sass/plugins/woocommerce.scss
+++ b/sass/plugins/woocommerce.scss
@@ -446,6 +446,7 @@ table.variations {
 	th {
 		border: 0;
 		padding-left: 0;
+		vertical-align: top;
 		word-break: normal;
 	}
 
